force-app/main/default/objects/Feature__c/fields/Quick_Note__c.field-meta.xml
<CustomField>
    <fullName>Quick_Note__c</fullName>
    <label>Quick Note</label>
    <length>20</length>
    <type>Text</type>
</CustomField>