force-app/main/default/objects/Feature__c/fields/Short_Info__c.field-meta.xml
<CustomField>
    <fullName>Short_Info__c</fullName>
    <label>Short Info</label>
    <length>20</length>
    <type>Text</type>
</CustomField>